# claude-code-work-arounds

./: .gitattributes  .gitignore  .pre-commit-config.yaml.example  .pre-commit-hooks.yaml  Cargo.toml
.claude/: settings.json
.claude/ccss_sessions/: 1a03909b-b928-4aaa-b5a6-088cf5770dab.jsonl
.claude/ccss_sessions/-Users-yuta-ghq-github-com-higumachan-claude-code-work-arounds/: b2e6a971-0d6f-4aa8-89f5-a7d559bf3301.jsonl  d04289f8-c656-4be9-8e3c-1603fcde3874.jsonl  f6ba9615-f288-4544-87e0-c1035e03604d.jsonl
.claude/ccss_sessions/-Users-yuta-ghq-github-com-higumachan-claude-code-work-arounds-tools-cc-sync-session/: 1c8f5789-831d-4508-ab46-ea68ee7115f3.jsonl  26c9c0c0-8ac2-4754-a973-65d7131a4e07.jsonl  479cb368-5d71-4b5d-9442-d3b786fc4b0c.jsonl  5f283479-703b-486a-b647-186d830e0d40.jsonl  763841bf-794d-4173-b0e9-bb196d4c963a.jsonl  83eb8c97-88e4-47d3-85a5-a6a38643f10a.jsonl  a86effb3-dc98-4644-8ded-b2fe3de30aec.jsonl
tools/cc-sync-session/: .gitignore  Cargo.toml  README.md
tools/cc-sync-session/src/: file_path_converter.rs  lib.rs  main.rs  mock.rs
tools/cc-sync-session/src/filesystem/: mod.rs  real.rs
tools/cc-sync-session/src/sync/: mod.rs
tools/cc-sync-session/tests/: integration_tests.rs
tools/cc-sync-session/tests/integration/: mod.rs  sync_integration_tests.rs
tools/cc-sync-session/tests/unit/: mod.rs  sync_tests.rs
