[package]
name = "cc-sync-session"
version = "0.2.0"
edition = "2021"
description = "A tool for syncing Claude Code session files"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
walkdir = "2.5"
filetime = "0.2"
log = "0.4"
env_logger = "0.11"
git2 = "0.18"

[dev-dependencies]
tempfile = "3.10"
